:lipstick: change heart color

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </a>
       </div>
 
-      <footer>Feito com ❤️ por © Chaves & Borba</footer>
+      <footer>Feito com 🤍 por © Chaves & Borba</footer>
       <script
         type="module"
         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
