--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             href="https://docs.google.com/forms/d/1Pde0rbxZOLJPj-2zjf3w9Ed-GMUmvu2mLiAsJ-FTGXo/edit"
             target="_blank"
           >
-            Pedido de Orçamento<br />(Prestadores de Serviços)
+            Contratos Personalizados<br />(Agenda 2024)
           </a>
         </li>
         <li>
@@ -44,7 +44,7 @@
             href="https://docs.google.com/forms/d/1o6YA7AI0wskxMywlctmMc5IrpwR11Yjab4uitO8rApg/edit"
             target="_blank"
           >
-            Pedido de Orçamento<br />(Advogados)
+            Modernize sua advocacia
           </a>
         </li>
         <li>
